--- a/index.html
+++ b/index.html
@@ -70,6 +70,7 @@
                     <li class="paper-item">
                         <div class="paper-content">
                             <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4557795" class="paper-link">Monetary Policy in the COVID Era and Beyond: The Fed vs the ECB</a> — with Carlo A. Favero
+                            [<a href="papers/2023_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
                             <p class="paper-abstract">This study examines monetary policy during and post-COVID by analysing innovative rules based on data from before the pandemic. It models fluctuating monetary policy rates using a stochastic trend, linking potential output growth, demographic age distribution, and inflation expectations to the prevailing interest rate trends in both the US and the Eurozone. The cyclical variations in short-term rates are associated with monetary policy through the conventional Taylor rule indicators. Whilst the standard model is robust for the US both in and out of sample, the Eurozone displays less consistent in-sample results and marked deviations in out-of-sample tests. Addressing the ECB's concerns about bond market fragmentation doesn't yield better results. Instead, a model in which the ECB follows the US example with caution and delay proves more effective.</p>
                         </div>
                         <div class="paper-figure">
@@ -79,11 +80,16 @@
                     </li>
                     <li class="paper-item">
                         <div class="paper-content">
-                            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4622555" class="paper-link">Modelling the Term Structure with Trends in Yields and Cycles in Excess Returns</a> — with Carlo A. Favero
-                            <p class="paper-abstract">This paper proposes an Affine Macro Term Structure model in which yields are drifting, sharing a common stochastic trend driven by the drift in short-term (monetary policy) rates and excess returns are stationary as the compensation for risk is driven by the cycles in yields. We apply the approach to US data and compare the empirical results from the new specification with those obtained from standard Affine Term Structure models. The cycle-trend decomposition-based Affine Term Structure model produces much better forecasts of the dynamics of yields and, consequently, different and stationary dynamics for the term premia.</p>
+                            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4622555" class="paper-link">Towards Data-Congruent Models of the Term Structure of Interest Rates</a> — with Carlo A. Favero
+                            <span class="publication-status">Accepted at Econometric Reviews</span>
+                            [<a href="papers/2025_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
+                            [<a href="papers/2025_favero/online_appendix.pdf" class="manuscript-link" target="_blank">Online Appendix</a>]
+                            <p class="paper-abstract">
+                                Bond yields can be decomposed into two unobservable components: the expected sequence of short-term rates and term premia. The identification of these two components is crucial to understand bond pricing and the effect of monetary policy on the term structure of interest rates. This paper illustrates how M.H. Pesaran's prescription of congruency between the salient features of the data and the reduced form, explicitly derived from stochastic dynamic optimization, effectively facilitates the relevant decomposition. By examining the historical evolution of term structure models, we demonstrate that the chosen specifications have not consistently aligned with the data, presenting a missed opportunity. In fact, a data-congruent specification helps in improving forecasts of the dynamics of US short-term rates and generates stationary dynamics for the term premia.
+                            </p>
                         </div>
                         <div class="paper-figure">
-                            <img src="images/2024_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
+                            <img src="images/2025_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
                         </div>
                     </li>
                 </ul>
