published papers added

--- a/index.html
+++ b/index.html
@@ -65,31 +65,42 @@
             </section>
             <section id="research">
                 <h2>Research</h2>
+                
+                <h3>Published Papers</h3>
+                <ul class="papers-list">
+                    <li class="paper-item">
+                        <div class="paper-content">
+                            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4622555" class="paper-link">Towards Data-Congruent Models of the Term Structure of Interest Rates</a> — with Carlo A. Favero
+                            <span class="publication-status">Accepted at Econometric Reviews</span>
+                            <p class="paper-abstract">
+                                Bond yields can be decomposed into two unobservable components: the expected sequence of short-term rates and term premia. The identification of these two components is crucial to understand bond pricing and the effect of monetary policy on the term structure of interest rates. This paper illustrates how M.H. Pesaran's prescription of congruency between the salient features of the data and the reduced form, explicitly derived from stochastic dynamic optimization, effectively facilitates the relevant decomposition. By examining the historical evolution of term structure models, we demonstrate that the chosen specifications have not consistently aligned with the data, presenting a missed opportunity. In fact, a data-congruent specification helps in improving forecasts of the dynamics of US short-term rates and generates stationary dynamics for the term premia.
+                            </p>
+                            <div class="paper-links">
+                                [<a href="papers/2025_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
+                                [<a href="papers/2025_favero/online_appendix.pdf" class="manuscript-link" target="_blank">Online Appendix</a>]
+                            </div>
+                        </div>
+                        <div class="paper-figure">
+                            <img src="images/2025_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
+                        </div>
+                    </li>
+                </ul>
+
                 <h3>Working Papers</h3>
                 <ul class="papers-list">
                     <li class="paper-item">
                         <div class="paper-content">
                             <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4557795" class="paper-link">Monetary Policy in the COVID Era and Beyond: The Fed vs the ECB</a> — with Carlo A. Favero
-                            [<a href="papers/2023_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
-                            <p class="paper-abstract">This study examines monetary policy during and post-COVID by analysing innovative rules based on data from before the pandemic. It models fluctuating monetary policy rates using a stochastic trend, linking potential output growth, demographic age distribution, and inflation expectations to the prevailing interest rate trends in both the US and the Eurozone. The cyclical variations in short-term rates are associated with monetary policy through the conventional Taylor rule indicators. Whilst the standard model is robust for the US both in and out of sample, the Eurozone displays less consistent in-sample results and marked deviations in out-of-sample tests. Addressing the ECB's concerns about bond market fragmentation doesn't yield better results. Instead, a model in which the ECB follows the US example with caution and delay proves more effective.</p>
+                            <p class="paper-abstract">
+                                This study examines monetary policy during and post-COVID by analysing innovative rules based on data from before the pandemic. It models fluctuating monetary policy rates using a stochastic trend, linking potential output growth, demographic age distribution, and inflation expectations to the prevailing interest rate trends in both the US and the Eurozone. The cyclical variations in short-term rates are associated with monetary policy through the conventional Taylor rule indicators. Whilst the standard model is robust for the US both in and out of sample, the Eurozone displays less consistent in-sample results and marked deviations in out-of-sample tests. Addressing the ECB's concerns about bond market fragmentation doesn't yield better results. Instead, a model in which the ECB follows the US example with caution and delay proves more effective.
+                            </p>
+                            <div class="paper-links">
+                                [<a href="papers/2023_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
+                            </div>
                         </div>
                         <div class="paper-figure">
                             <img src="images/2023_favero/fig5_EA.png" loading="lazy" alt="Euro Area figure">
                             <img src="images/2023_favero/fig5_US.png" loading="lazy" alt="US figure">
-                        </div>
-                    </li>
-                    <li class="paper-item">
-                        <div class="paper-content">
-                            <a href="https://papers.ssrn.com/sol3/papers.cfm?abstract_id=4622555" class="paper-link">Towards Data-Congruent Models of the Term Structure of Interest Rates</a> — with Carlo A. Favero
-                            <span class="publication-status">Accepted at Econometric Reviews</span>
-                            [<a href="papers/2025_favero/main.pdf" class="manuscript-link" target="_blank">Manuscript</a>]
-                            [<a href="papers/2025_favero/online_appendix.pdf" class="manuscript-link" target="_blank">Online Appendix</a>]
-                            <p class="paper-abstract">
-                                Bond yields can be decomposed into two unobservable components: the expected sequence of short-term rates and term premia. The identification of these two components is crucial to understand bond pricing and the effect of monetary policy on the term structure of interest rates. This paper illustrates how M.H. Pesaran's prescription of congruency between the salient features of the data and the reduced form, explicitly derived from stochastic dynamic optimization, effectively facilitates the relevant decomposition. By examining the historical evolution of term structure models, we demonstrate that the chosen specifications have not consistently aligned with the data, presenting a missed opportunity. In fact, a data-congruent specification helps in improving forecasts of the dynamics of US short-term rates and generates stationary dynamics for the term premia.
-                            </p>
-                        </div>
-                        <div class="paper-figure">
-                            <img src="images/2025_favero/term_premia_comparison.svg" loading="lazy" alt="Term Premium Comparison between ACM and FF models">
                         </div>
                     </li>
                 </ul>
