--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/jpswalsh/academicons@1/css/academicons.min.css">
     <meta name="description" content="Academic portfolio of Rubén Fernández-Fuertes, PhD Student in Finance at Bocconi University, specializing in Macro-Finance and Monetary Policy.">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon-light.ico" id="light-scheme-icon">
+    <link rel="icon" type="image/x-icon" href="images/favicon/favicon-dark.ico" id="dark-scheme-icon">
 </head>
 <body>
     <button id="theme-toggle" aria-label="Toggle dark mode" class="theme-toggle">
